--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.1",
+    "express-validator": "^3.1.2",
+    "mongodb": "^2.2.24",
+    "mongoose": "^4.8.6",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta10",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
