edit in README file

--- a/.env.example
+++ b/.env.example
@@ -18,14 +18,21 @@ MONGODB_PASSWORD=
 ###############################
 
 #RabbitMQ
-
+RABBITMQ_HOST=
+RABBITMQ_PORT=5672
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_QUEUE=email_service
 
 ###############################
 #            MAIL             #
 ###############################
 
 #mail
-MAIL_PROVIDER=sendgrid
+#provide active services in order, comma separated
+MAIL_PROVIDERS=mailjet,mandrill
+MAIL_SENDER_EMAIL=
+MAIL_SENDER_NAME=
 
 #mailgun
 MAILGUN_API_KEY=
@@ -33,3 +40,10 @@ MAILGUN_DOMAIN=
 
 #sendgrid
 SENDGRID_API_KEY=
+
+#mandrill
+MANDRILL_API_KEY=
+
+#mailjet
+MAILJET_API_KEY=
+MAILJET_API_SECRET=
