HF - fix Error in basic auth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 NODE_ENV=production
-
+PORT=3000
+#BASIC_USER=
+#BASIC_PASSWD=
+BASIC_USER=
+BASIC_PASSWD=
 ###############################
 #         DATABASES           #
 ###############################
@@ -7,7 +11,7 @@ NODE_ENV=production
 DATABASE=mongodb
 
 #mongodb
-MONGODB_HOST=localhost
+MONGODB_HOST=
 MONGODB_PORT=27017
 MONGODB_DATABASE=mail
 MONGODB_USER=
@@ -30,7 +34,7 @@ RABBITMQ_QUEUE=email_service
 
 #mail
 #provide active services in order, comma separated
-MAIL_PROVIDERS=mailjet,mandrill
+MAIL_PROVIDERS=
 MAIL_SENDER_EMAIL=
 MAIL_SENDER_NAME=
 
